--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,11 @@
 #
 
 # Site settings
-title: BioJava
+title: BioJava homepage (under construction)
 description: |
-  BioJava is an open-source project dedicated to providing a Java framework for processing biological data. It provides analytical and statistical routines, parsers for common file formats and allows the manipulation of sequences and 3D structures. The goal of the biojava project is to facilitate rapid application development for bioinformatics.
+  BioJava is an open-source project dedicated to providing a Java framework for processing biological data.
+  It provides analytical and statistical routines, parsers for common file formats and allows the manipulation of sequences and 3D structures.
+  The goal of the biojava project is to facilitate rapid application development for bioinformatics.
 owner: BioJava
 first_published: 2000 
 email: biojava-l@biojava.org
@@ -56,10 +58,3 @@ markdown: kramdown
 #sass:
 #  style: compressed
 
- github: [metadata]
-  kramdown:
-     input: GFM
-        hard_wrap: false
-	 gems:
-	    - jekyll-coffeescript
-	       - jekyll-paginate
