slowly building up new homepage

--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,9 @@
 #
 
 # Site settings
-title: BioJava homepage (under construction)
+title: BioJava 
 description: |
   BioJava is an open-source project dedicated to providing a Java framework for processing biological data.
-  It provides analytical and statistical routines, parsers for common file formats and allows the manipulation of sequences and 3D structures.
-  The goal of the biojava project is to facilitate rapid application development for bioinformatics.
 owner: BioJava
 first_published: 2000 
 email: biojava-l@biojava.org
